--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma": "^0.13.19",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-requirejs": "^0.2.3",
     "node-static": "^0.7.7"
