--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-requirejs": "^0.2.3",
+    "karma-safari-launcher": "^0.1.1",
     "node-static": "^0.7.7"
   }
 }
