--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
+    "karma-opera-launcher": "^0.3.0",
     "karma-requirejs": "^0.2.3",
     "karma-safari-launcher": "^0.1.1",
     "node-static": "^0.7.7"
