--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gulp-ssh": "^0.5.3",
     "gulp-w3cjs": "^1.2.0",
     "jasmine-core": "^2.4.1",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "karma": "^0.13.19",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.2",
