--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ before_script:
   - npm i -g gulp
   - npm i -g bower
   - bower install
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script: gulp test
