--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "stable"
 addons:
-  firefox: "stable"
+  firefox: "latest"
 before_script:
   - npm i -g gulp
   - npm i -g bower
