--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-closure-compiler-service": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
+    "gulp-coveralls": "^0.1.4",
     "gulp-csslint": "^0.2.0",
     "gulp-html-minifier": "^0.1.8",
     "gulp-html-replace": "^1.5.5",
@@ -42,6 +43,7 @@
     "karma": "^0.13.19",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-opera-launcher": "^0.3.0",
